--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ google-auth-httplib2==0.1.1
 google-api-python-client==2.115.0
 Pillow==10.2.0
 pytesseract==0.3.10
-Flask==2.2.5
+flask[async]
 apscheduler==3.10.4
 python-dotenv
 requests
