--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
-python-telegram-bot==20.3
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.1.1
-google-api-python-client==2.115.0
-Pillow==10.2.0
-pytesseract==0.3.10
-flask[async]
-apscheduler==3.10.4
-python-dotenv
-requests
-pyTelegramBotAPI
-pytz
-gspread==5.7.2
-google-cloud-vision==3.9.0
-fastapi==0.95.2
-uvicorn[standard]
+Flask==2.3.3
+python-telegram-bot==20.7
+gspread==5.12.4
+oauth2client==4.1.3
+pillow==10.3.0
+opencv-python==4.9.0.80
+easyocr==1.7.1
+numpy==1.26.4
+python-dotenv==1.0.1
