First upload for BelanjaKuBot

--- a/vercel.json
+++ b/vercel.json
@@ -1,37 +1,24 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+  version 2,
+  builds [
+    { src api.py, use @vercelpython }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
+  routes [
+    { src bot1, dest apibot1.py },
+    { src bot2, dest apibot2.py }
   ],
-  "functions": {
-    "index.js": {
-      "maxDuration": 30
-    }
-  },
-  "env": {
-    "TZ": "Asia/Kuala_Lumpur"
-  },
-  "crons": [
+  crons [
     {
-      "path": "/api/cron/daily",
-      "schedule": "0 20 * * *"
+      path bot2,
+      schedule 0 0           Harian jam 8 pagi MYT
     },
     {
-      "path": "/api/cron/weekly", 
-      "schedule": "0 20 * * 0"
+      path bot2type=weekly,
+      schedule 0 0   1        Mingguan - setiap Isnin
     },
     {
-      "path": "/api/cron/monthly",
-      "schedule": "0 20 1 * *"
+      path bot2type=monthly,
+      schedule 0 0 1          Bulanan - setiap 1hb
     }
   ]
 }
